--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,7 @@
                 <form id="item-form" action="#" method="post">
                     <input 
                     type="text"
+                    id="name"
                      name="name" 
                      class="item-form__input" 
                     placeholder="Digite a atividade"
