--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,72 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    /> -->
     <title>TODO API_LIST</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href=".//css/styles.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
     <div class="container">
-        <header class="header">
-            <h1 class="header__title">TODO List</h1>
-            <section id="form-container" class="form-container">
-                <h2 class="form-container__title">Cadastro de Atividades</h2>
-                
-                <form id="item-form" action="#" method="post">
-                    <input 
-                    type="text"
-                    id="name"
-                     name="name" 
-                     class="item-form__input" 
-                    placeholder="Digite a atividade"
-                    />
-                    <textarea id="description" class="item-form__textarea"
-                    placeholder="descreva sua atividade"> 
-                    </textarea>
+      <header class="header">
+        <h1 class="header__title">TODO List</h1>
+        <section id="form-container" class="form-container">
+            <h2 class="form-container__title">Cadastro de Atividades</h2>
+          <form id="item-form" action="#" method="post">
+            <input
+              type="text"
+              name="name"
+              id="name"
+              class="item-form__input"
+              placeholder="Digite a atividade"
+            />
+            <textarea
+              id="description"
+              class="item-form__textarea"
+              placeholder="Descreva sua atividade"
+            >
+            </textarea>
 
-                    <button type="submit" class="item-form__button">
-                        Cadastrar
-                    </button>
+            <button type="submit" class="item-form__button">Cadastrar</button>
+          </form>
+          <div id="message" class="message">Mensagem de retorno</div>
+        </section>
+      </header>
 
-                </form>
-                <div id="message" class="message">Mensagem de retorno</div>
+      <main class="main">
+        <section id="item-list" class="item-list">
+          <article class="item-card">
+            <header class="item-card__header">
+              <h1 class="item-card__title">Título da atividade</h1>
+            </header>
+
+            <section class="item-card__body">
+              <p class="item-card__description">
+                Essa é a descrição da atividade
+              </p>
             </section>
-        </header>
 
-        <main class="main">
-            <section id="item-list" class="item-list">
-                <article class="item-card">
-                    <header class="item-card__header">
-                        <h1 class="item-card__title">Título da atividade</h1>
-                    </header>
-                    <section class="item-card__body">
-                        <p class="item-card__description">
-                            Essa é a descrição da atividade
-                        </p>
-                    </section>
-
-                    <footer class="item-card__footer">
-                        <button class= "item-card__button item-card__button--edit">
-                            Editar
-                         </button>
-                        <button class= "item-card__button item-card__button--delete">
-                            Excluir
-                        </button>
-
-                    </footer>
-                </article>
-            </section>
-        </main>
+            <footer class="item-card__footer">
+              <button class="item-card__button item-card__button--edit">
+                Editar
+              </button>
+              <button class="item-card__button item-card__button--delete">
+                Excluir
+              </button>
+            </footer>
+          </article>
+        </section>
+      </main>
     </div>
 
-
-
-
     <script src="./js/app.js"></script>
-</body>
+  </body>
 </html>
